changed button styling

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,3 +4,9 @@
     background: url("../images/double-bubble-outline.png");
     background-blend-mode: multiply;
 }
+
+#add-button {
+    margin: auto;
+    display: block;
+    font-size: 1.5rem !important;
+}
